using UnityEngine;

public class AnimatorHash
{
    public static readonly int Death = Animator.StringToHash("Death");
    public static readonly int Fall = Animator.StringToHash("Fall");
    public static readonly int Jump = Animator.StringToHash("Jump");
    public static readonly int Land = Animator.StringToHash("Land");
    public static readonly int Move = Animator.StringToHash("Move");
    public static readonly int Power = Animator.StringToHash("Power");
    public static readonly int Slide = Animator.StringToHash("Slide");
    public static readonly int VerticalSpeed = Animator.StringToHash("VerticalSpeed");
}
